--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,36 @@
-<h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <div class='header'>
+<%= link_to root_path do%>
+<%= image_tag('arrow-118-32.png', class:'icon') %>
+<%end%>
+<h2>REGISTER</h2>
+ <div class="actions">
+      <%= f.submit "Sign up", class:'login' %>
+    </div>
+</div>
   <%= render "devise/shared/error_messages", resource: resource %>
 
+<div class="form-container">
+<div class="field">
+    <%= f.text_field :name, autofocus: true, autocomplete: "name", placeholder: "Name", class:'form-control' %>
+  </div>
+  
+
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email" , placeholder: "Email", class:'form-control' %>
   </div>
 
   <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+   
+    <%= f.password_field :password, autocomplete: "new-password", placeholder: 'Password (6 characters minimum)', class:'form-control' %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: 'Password confirmation', class:'form-control' %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
