--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,9 +1,18 @@
 <div class = 'header'> 
+<% if left == 'hamburger'%>
 <nav id="hamburger-button">
       <div class="bar1"></div>
     <div class="bar2"></div>
     <div class="bar3"></div>
     </nav>
+
+    <%end%>
+<% if left == 'back' %>
+<%= link_to path do%>
+<%= image_tag('arrow-118-32.png', class:'icon') %>
+<%end%>
+<%end%>
+
 
 <h2> <%= middle %> </h2>
 
