--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,34 +1,27 @@
-<%= render partial: 'shared/header', locals: {middle: 'CATEGORIES'}%>
+<%= render partial: 'shared/header', locals: {left:'hamburger' , middle: 'CATEGORIES'}%>
 
-<div class = 'main-content'>
+<div class='main-content'>
+  <% if @groups.any? %>
+  <h1 class = 'heading blue-text'> List of Categories </h1>
+    <% @groups.each do |group| %>
+      <%= link_to group_expenses_path(group),class:'category-card' do %>
+       
+          <div class='icon-container'>
+            <% if group.icon.present? %>
+              <%= image_tag group.icon %>
+            <% end %>
+          </div>
+          <div class='group-information'>
+            <p><%= group.name %></p>
+            <p><%= group.created_at.strftime('%d %b %Y') %></p>
+          </div>
+          <div class='group-amount'> $<%=number_with_precision(group.expenses.sum(:amount), precision: 2) || 0.00 %> </div>
+   
+      <% end %>
+    <% end %>
+  <% else %>
+    <h1 class='heading blue-text'>No category exists</h1>
+  <% end %>
 
-<% if @groups.any? %>
-
-<% @groups.each do |group| %>
-<div class = 'category-card'>
-<div class = 'icon-container'>
-<% if group.icon.present? %>
-  <%= image_tag group.icon %>
-<% end %>
+  <%= link_to "ADD CATEGORY", new_group_path, method: :get, class: "btn", id:'add-category' %>
 </div>
-<div class='group-information'> 
- <p> <%=group.name%> </p>
- <p> <%=group.created_at.strftime('%d %b %Y')%> </p>
- </div>
-
-<div class='group-amount'> $17.00 </div>
-
-
-
-</div>
-
-<%end%>
-<% else %>
-<h1 class='heading'>The category list is empty</h1>
-<%end%>
-
-
-<%= link_to "Add category", new_group_path, method: :get, class: "btn btn-primary add-category" %>
-
-</div>
-
