--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,6 +19,10 @@
   text-align: center;
 }
 
+.blue-text {
+  color: #3778c2;
+}
+
 .splash-screen {
   min-height: 100vh;
   max-height: 100vh;
@@ -59,6 +63,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  padding: 2rem 0;
 }
 
 .header {
@@ -117,8 +122,19 @@
   margin-left: 5px; /* Adjust the value as needed */
 }
 
-.add-category {
+#add-category,
+#add-expense {
   margin: 2rem 0;
+  background-color: #5fb523;
+  color: #fff;
+}
+
+#add-category {
+  width: 80%;
+}
+
+#add-expense {
+  width: 70%;
 }
 
 .category-card {
@@ -127,6 +143,14 @@
   width: 80%;
   padding: 2rem;
   gap: 0.5rem;
+  margin: 1rem 0;
+  text-decoration: none;
+}
+
+.expense-card {
+  background-color: #f0f2f1;
+  width: 70%;
+  padding: 2rem;
   margin: 1rem 0;
 }
 
@@ -147,4 +171,16 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+.categories-check {
+  gap: 0.5rem;
+  flex-wrap: wrap;
+}
+
+.notice {
+  text-align: center;
+  margin: 1rem 0;
+  color: #d13d3d;
+  font-weight: bold;
 }
