--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,7 +9,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Proxima Nova';
+  font-family: 'Proxima Nova', serif;
   color: #434b54;
 }
 
@@ -29,6 +29,7 @@
   display: flex;
   flex-direction: column;
 }
+
 .splash-screen h1 {
   flex-grow: 1;
   display: flex;
