--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class='main-content'>
   <% if @groups.any? %>
-  <h1 class = 'heading blue-text'> List of Categories </h1>
+  <h1 class = 'heading blue-text'> List of Categories of <%=@user.name%> </h1>
     <% @groups.each do |group| %>
       <%= link_to group_expenses_path(group),class:'category-card' do %>
        
