--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,6 +9,7 @@
       <%= f.submit "Sign up", class:'login' %>
     </div>
 </div>
+<%= render partial: 'shared/notice' %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
 <div class="form-container">
