--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,4 +1,5 @@
 <%= render partial: 'shared/header', locals: {left:'hamburger' , middle: 'CATEGORIES'}%>
+<%= render partial: 'shared/notice' %>
 
 <div class='main-content'>
   <% if @groups.any? %>
