--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,4 +1,5 @@
 <%= render partial: 'shared/header', locals: {left:'back', path:root_path, middle: 'NEW CATEGORY'}%>
+<%= render partial: 'shared/notice' %>
 
 <%= form_with(model: @group, url: groups_path, method: :post ) do |f| %>
 
