--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -19,6 +19,8 @@
 
 
 <%end%>
+</div>
 
+ <div class='footer-button'>
 <%= link_to "ADD EXPENSE", new_group_expense_path(@group), method: :get, class: "btn ", id:'add-expense' %>
 </div>
