--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -23,6 +23,7 @@
   <% else %>
     <h1 class='heading blue-text'>No category exists</h1>
   <% end %>
-
-  <%= link_to "ADD CATEGORY", new_group_path, method: :get, class: "btn", id:'add-category' %>
 </div>
+   <div class='footer-button'>
+  <%= link_to "ADD CATEGORY", new_group_path, method: :get, class: "btn", id:'add-category' %>
+  </div>
